<resources>
    <string name="app_name">ShelterApp</string>
    <string name="delete_all">Delete all</string>
    <string name="input_error">You haven\'t filled all fields</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="animal">Animal</string>
    <string name="has_chip">Does it have chip?</string>
    <string name="register_date">Register Date</string>
    <string name="delete">DELETE</string>
    <string name="edit">Edit</string>
    <string name="delete_question">Are you sure you want to delete it?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="type_of_animal">Type of animal</string>
    <string name="age_details">%1$d years</string>
    <string name="lat_detail">Lat: %1$f</string>
    <string name="lng_detail">Long: %1$f</string>
</resources>
